misc changes
header footer
tweaks